tests/expectations/compiler/futures/future_access_tuple_fail.out
Error [ESAZ0374005]: A Final may not be used in this way
    --> compiler-test:9:30
     |
   9 |         let start_2: Final = start.1;
     |                              ^^^^^^^
     |
     = Finals should be created, assigned to a variable, and consumed without being moved or reassigned.
